deploy: 48ac66cef9f79c88453f00f501e8c234daf6fd7e

--- a/EXERCISES/README.html
+++ b/EXERCISES/README.html
@@ -15,7 +15,7 @@
     <script src="../_static/translations.js"></script>
     <link rel="index" title="Indice" href="../genindex.html" />
     <link rel="search" title="Cerca" href="../search.html" />
-    <link rel="prev" title="Char Drivers" href="../DOUBTS/LDD/CHAPTERS/3.html" />
+    <link rel="prev" title="Debugging Techniques" href="../DOUBTS/LDD/CHAPTERS/4.html" />
    
   <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
   
@@ -68,7 +68,7 @@ in modo da impratichirmi un pochettino e anche da referenza futura.</p>
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="../DOUBTS/LDD/CHAPTERS/3.html" title="capitolo precedente">Char Drivers</a></li>
+      <li>Previous: <a href="../DOUBTS/LDD/CHAPTERS/4.html" title="capitolo precedente">Debugging Techniques</a></li>
   </ul></li>
 </ul>
 </div>
